--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="Default">Default</string>
     <string name="TakePhoto">Take a photo</string>
     <string name="Photo">Photo</string>
+    <string name="ChoosePhoto">Choose a photo</string>
 </resources>
